--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,49 +103,116 @@ p{
     opacity: 0.65;
 }
 
-		#main > section.one {
-				background-color: #81918E;
-                margin-top: 0;
-                width: 95%;
-                left: 2.5%;
-                border-radius: 8px;
-                position: relative;
-                box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.08);
-                margin-top: 1em;
-                padding: 0;
-                height: 70vh;
-                
-			}
-            .topbackground1{
-                padding: 0 0;
-                background: rgba(0, 0, 0, 0.5);
-            }
-            .button{
-                background-color: transparent;
-                background-image: unset;
-                border: solid 1px #fff;
-                padding: 0.4em 1.5em 0.4em 1.5em;
-                font-size: 18px;
-                border-radius: 4px;
-                
-            }
-            .button:hover{
-                background: rgba(255, 255, 255, 0.25);
-                background-image: none;
-                border: none;
-                margin-top: 1px;
-                margin-bottom: 1px;
-            }
-			#main > section.two, #main > section.three, #main > section.four {
-                background-color: #ffffff;
-                background-image: unset;
-                margin-top: 1.5em;
-                width: 95%;
-                left: 2.5%;
-                border-radius: 8px;
-                position: relative;
-                box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.08);
-			}
+#main > section.one {
+        background-color: #81918E;
+        margin-top: 0;
+        width: 95%;
+        left: 2.5%;
+        border-radius: 8px;
+        position: relative;
+        box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.08);
+        margin-top: 1em;
+        padding: 0;
+        height: 70vh;
+        
+    }
+    .topbackground1{
+        padding: 0 0;
+        background: rgba(0, 0, 0, 0.5);
+    }
+    .button{
+        background-color: transparent;
+        background-image: unset;
+        border: solid 1px #fff;
+        padding: 0.4em 1.5em 0.4em 1.5em;
+        font-size: 18px;
+        border-radius: 4px;
+        
+    }
+    .button:hover{
+        background: rgba(255, 255, 255, 0.25);
+        background-image: none;
+        border: none;
+        margin-top: 1px;
+        margin-bottom: 1px;
+    }
+    #main > section.two, #main > section.three, #main > section.four {
+        background-color: #ffffff;
+        background-image: unset;
+        margin-top: 1.5em;
+        width: 95%;
+        left: 2.5%;
+        border-radius: 8px;
+        position: relative;
+        box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.08);
+    }
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1;
+  }
+  
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #4D7195;
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #678eb6;
+  }
+.pdframe{
+    width: 100%;
+    height: 80vh;
+    border-radius: 16px;
+}
+.viddiv>video{
+    border-radius: 16px;
+    width: 100%;
+
+}
+.viddiv>img{
+    border-radius: 16px;
+    width: 100%;
+
+}
+iframe::-webkit-scrollbar {
+    width: 10px;
+  }
+  iframe::-webkit-scrollbar-track {
+    background: #f1f1f1;
+  }
+  
+  /* Handle */
+  iframe::-webkit-scrollbar-thumb {
+    background: #4D7195;
+  }
+  
+  /* Handle on hover */
+  iframe::-webkit-scrollbar-thumb:hover {
+    background: #678eb6;
+  }
+video{
+    border-radius: 16px;
+}
+.thirdimageser{
+    border-radius: 16px !important;
+
+    
+
+}
+img{
+    border-radius: 16px;
+    width: 100%;
+}
+
+
+
 
 @media screen and (max-width: 960px){
     #headerToggle .toggle:before {
@@ -226,8 +293,25 @@ form textarea:focus {
     height: fit-content;
     width: 100%;
 }
-@media screen and (max-width:500px){
+.ree:focus { 
+    outline:none; 
+} 
+
+
+@media screen and (max-width: 960px){
+    .row > * {
+    padding: 1rem;
+}
+}
+
+		 	
+@media screen and (max-width:600px){
     #main > section.one{
         height: 80vh;
     }
+    .vidsa{
+        width: 100% !important;
+        height: 60px !important;
+    }
+    
 }
